@@ -7,6 +7,7 @@ Bug fixes:
 - PR#5024: camlp4r now handles underscores in irrefutable patern matching of records
 - PR#5238, PR#5277: Sys_error when getting error location
 - PR#5301: camlp4r and exception equal to another one with parameters
+- PR#5316: objinfo now shows ccopts/ccobjs/force_link when applicable
 - PR#5322: type abbreviations expanding to a universal type variable
 - PR#5330: thread tag with '.top' and '.inferred.mli' targets
 - PR#5335: Unix.environment segfaults after a call to clearenv
